--- a/src/generator/templates/generator/home.html
+++ b/src/generator/templates/generator/home.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Password Generator</title>
 </head>
-<form action="password">
+<form action="{% url 'password' %}">
     <header>
 
     </header>
