generate simple passwords

--- a/src/generator/templates/generator/password.html
+++ b/src/generator/templates/generator/password.html
@@ -5,6 +5,8 @@
     <title>Title</title>
 </head>
 <body>
-    Password
+
+   <h1>Your password is :</h1>
+   <h2>{{ password }}</h2>
 </body>
 </html>
