--- a/src/generator/templates/generator/home.html
+++ b/src/generator/templates/generator/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Password Generator</title>
 </head>
+<!--path to view-->
 <form action="{% url 'password' %}">
     <header>
 
@@ -29,6 +30,8 @@
              <input type="checkbox" name="special"> Special Characters
         <br>
         <input type="submit" value="Generate Password">
+        <br>
+        <a href="{% url 'about'%}">About</a>
     </body>
 </form>
 </html>
