--- a/src/generator/templates/generator/about.html
+++ b/src/generator/templates/generator/about.html
@@ -3,8 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <title>About</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
 </head>
 <body>
+  <div class="container text-center">
    <h3>Welcom on page about</h3>
    <br>
    <div class="detail">
@@ -12,7 +14,8 @@
    </div>
    <br>
   <div class="ref">
-    <a href="{% url 'home'%}">Home</a>
+    <a href="{% url 'home'%}" class="btn btn-warning">Home</a>
   </div>
+ </div>
 </body>
 </html>
