--- a/src/generator/templates/generator/home.html
+++ b/src/generator/templates/generator/home.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>Password Generator</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+<!--     https://getbootstrap.com/docs/5.2/getting-started/introduction/-->
 </head>
 <!--path to view-->
 <form action="{% url 'password' %}">
@@ -10,7 +12,9 @@
 
     </header>
     <body>
+      <div class="container text-center">
         <h1>Password Generator</h1>
+
         <select name="length">
             <option value="6">6</option>
             <option value="7">7</option>
@@ -21,7 +25,7 @@
             <option value="12" selected="selected">12</option>
             <option value="13">13</option>
             <option value="14">14</option>
-        </select>
+        </select> Lenght password
         <br>
              <input type="checkbox" name="uppercase"> Uppercase
         <br>
@@ -29,9 +33,11 @@
         <br>
              <input type="checkbox" name="special"> Special Characters
         <br>
-        <input type="submit" value="Generate Password">
+        <input type="submit" value="Generate Password" class="btn btn-info">
         <br>
-        <a href="{% url 'about'%}">About</a>
+        <a href="{% url 'about'%}" class="btn btn-warning">About</a>
+      </div>
+
     </body>
 </form>
 </html>
